# gateway-sample

./: .dockerignore  .gitignore  Dockerfile.auth-service  Dockerfile.service_a  Dockerfile.service_b  Dockerfile.service_c  README.md
dev/: docker-compose.yml
docs/api/: auth-service.yaml  service_a.yaml  service_b.yaml  service_c.yaml
local_dev/: docker-compose.yml
service/auth_service/: main.py  pyproject.toml
service/auth_service/routers/: auth_service_routers.py
service/auth_service/routers/model/: model.py
service/service_a/: main.py  pyproject.toml
service/service_a/config/: config.py
service/service_a/routers/: router_a.py
service/service_b/: main.py  pyproject.toml
service/service_b/config/: config.py
service/service_b/routers/: router_b.py
service/service_c/: main.py  pyproject.toml
service/service_c/config/: config.py
service/service_c/routers/: router_c.py
service/utils/routers/: health_router.py  metrics_router.py
